# GameJam

./: .gitignore  CMakeLists.txt  Makefile  README.md  RFC-doc.md  cmake_install.cmake
.github/workflows/: CI.yml  c-cpp.yml  client_compilation.yml  engine_compilation.yml  server_compilation.yml
client/: CMakeLists.txt  Makefile  cmake_install.cmake  conanfile.txt
client/include/: UDPclient.hpp
client/includes/: UDPclient.hpp
client/src/: UDPclient.cpp  main.cpp
engine/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  engine_docs  r-type_engine  scene_test.json
engine/client/: Makefile  cmake_install.cmake
engine/docs/: ARCHITECTURE.md  COMPONENT.md  DEVELOPMENT.md  DOCUMENTATION.md  ENTITY.md  FIRSTGAME.md  INFORMATION.md  INSTALL.md  JSON.md  SYSTEM.md  TYPE.md
engine/engine/: Makefile  cmake_install.cmake
engine/includes/: Ecs.hpp  main.hpp
engine/includes/component/: Damage.hpp  Life.hpp  Position.hpp  TComponent.hpp
engine/includes/components/: AComponent.hpp  Animation.hpp  C_Admin.hpp  C_Ammo.hpp  C_AnimatedMove.hpp  C_Animation.hpp  C_AnimationDirection.hpp  C_Attack.hpp  C_Background.hpp  C_Bonus.hpp  C_BonusPower.hpp  C_Breakable.hpp  C_Button.hpp  C_ChargedShoot.hpp  C_Child.hpp  C_Client.hpp  C_Clock.hpp  C_ClockAutoMove.hpp  C_ClockSpeed.hpp  C_Direction.hpp  C_EnemyAmmo.hpp  C_EntityMovementClock.hpp  C_Experience.hpp  C_FireRate.hpp  C_FireRateSpeed.hpp  C_Follow.hpp  C_Grass.hpp  C_Gravity.hpp  C_Grounded.hpp  C_Hitbox.hpp  C_Inventory.hpp  C_Invincibility.hpp  C_Invisible.hpp  C_IsAutoMove.hpp  C_IsClickable.hpp  C_IsFighting.hpp  C_IsMoving.hpp  C_Jump.hpp  C_JumpHeight.hpp  C_Life.hpp  (+62 more)
engine/includes/entity/: Entity.hpp  EntityBuilder.hpp  IEntity.hpp  TEntity.hpp
engine/includes/parser/: jsonParser.hpp
engine/includes/scene/: ComponentRegister.hpp  Scene.hpp  SceneBuilder.hpp  SceneDirector.hpp  SystemRegister.hpp  TScene.hpp
engine/includes/system/: AnimationSystem.hpp  CollisionSystem.hpp  DisplaySystem.hpp  HitSystem.hpp  ISystem.hpp  InputSystem.hpp  ManaSystem.hpp  MouvementSystem.hpp  PositionSystem.hpp  S_Animation.hpp  S_AutoMove.hpp  S_BasicInput.hpp  S_Collision.hpp  S_Display.hpp  S_EraseEntity.hpp  S_Gravity.hpp  S_Hit.hpp  S_Input.hpp  S_InputFromPlayer.hpp  S_KillEntity.hpp  S_MakeBaby.hpp  S_Mana.hpp  S_Mouvement.hpp  S_Parallax.hpp  S_PlayMusic.hpp  S_PlaySound.hpp  S_Position.hpp  S_Score.hpp  S_SinMoov.hpp  S_Sound.hpp  S_SpawnPokemon.hpp  S_Target.hpp  S_WriteText.hpp  System.hpp  TSystem.hpp
engine/server/: Makefile  cmake_install.cmake
engine/src/: Ecs.cpp  main.cpp
engine/src/entity/: Entity.cpp  EntityBuilder.cpp  IEntity.cpp
engine/src/parser/: jsonParser.cpp
engine/src/scene/: ComponentRegister.cpp  Scene.cpp  SceneBuilder.cpp  SceneDirector.cpp  SystemRegister.cpp
engine/src/system/: ISystem.cpp  S_Animation.cpp  S_AutoMove.cpp  S_BasicInput.cpp  S_Collision.cpp  S_Display.cpp  S_Gravity.cpp  S_Hit.cpp  S_Input.cpp  S_InputFromPlayer.cpp  S_KillEntity.cpp  S_MakeBaby.cpp  S_Mana.cpp  S_Mouvement.cpp  S_Parallax.cpp  S_PlayMusic.cpp  S_PlaySound.cpp  S_Position.cpp  S_Score.cpp  S_SinMoov.cpp  S_Sound.cpp  S_SpawnPokemon.cpp  S_Target.cpp  S_WriteText.cpp  System.cpp
exemple/: exemple.json
exemple/components/: c_admin.json  c_ammo.json  c_animation.json  c_background.json  c_bonus.json  c_bonuspower.json  c_chargedshoot.json  c_child.json  c_client.json  c_clock.json  c_direction.json  c_firerate.json  c_fireratespeed.json  c_follow.json  c_hitbox.json  c_inventory.json  c_ismooving.json  c_life.json  c_mana.json  c_music.json  c_musicisactive.json  c_parallax.json  c_parallaxclock.json  c_player.json  c_playerammo.json  c_position.json  c_positionend.json  c_positionfollow.json  c_positionshot.json  c_positionstart.json  c_range.json  c_server.json  c_shield.json  c_shoot.json  c_shootchargin.json  c_sinclock.json  c_sinmoov.json  c_size.json  c_sound.json  c_soundbuffer.json  (+9 more)
exemple/entities/: e_1.json  e_10.json  e_11.json  e_12.json  e_13.json  e_14.json  e_15.json  e_16.json  e_17.json  e_18.json  e_19.json  e_2.json  e_20.json  e_21.json  e_22.json  e_23.json  e_24.json  e_25.json  e_26.json  e_27.json  e_28.json  e_29.json  e_3.json  e_30.json  e_31.json  e_32.json  e_33.json  e_34.json  e_35.json  e_36.json  e_37.json  e_38.json  e_39.json  e_4.json  e_40.json  e_41.json  e_42.json  e_43.json  e_5.json  e_6.json  (+7 more)
exemple/scenes/scene_1/: scene_1.json  scene_1_components.json  scene_1_entities.json
exemple/scenes/scene_start/: scene_start_scene.json  systems.json
exemple/systems/: s_animation.json  s_collision.json  s_display.json  s_input.json  s_killentity.json  s_makebaby.json  s_mana.json  s_mouvement.json  s_parallax.json  s_playmusic.json  s_playsound.json  s_position.json  s_sinmoov.json  s_target.json  systems.json
horror/: aquarium.json  couloir.json  couloir_top.json  end.json  enter.json  enter_left.json  enter_right.json  game.json  intro.json  piano.json  settings.json  taker.json  zone_chill.json  zone_chill_left.json  zone_chill_top.json
meetboy/: game.json  settings.json  timeline_1.json  timeline_2.json  timeline_3.json  timeline_4.json  timeline_5.json
pokemon/: 0_0.json  0_0_bis.json  0_1.json  0_1_bis.json  0_2.json  0_2_bis.json  0_3.json  0_3_bis.json  0_4.json  0_4_bis.json  0_5.json  0_5_bis.json  0_6.json  0_6_bis.json  0_7.json  0_7_bis.json  0_8.json  0_8_bis.json  0_9.json  animation.json  game.json  settings.json
rtype/: game.json  infinit_level.json  scene_test.json  timeline_3.json  timeline_5.json  timeline_boss.json  timeline_level_1.json  timeline_level_2.json  timeline_menu.json  timeline_tutorial.json
rtype_multi/: game.json  infinit_level.json  settings.json  timeline_boss.json  timeline_level_1.json
server/: CMakeLists.txt  Makefile  cmake_install.cmake  scene_test.json
server/include/: BinaryProtocole.hpp  UDPserver.hpp  main.hpp
server/includes/: BinaryProtocole.hpp  main.hpp
server/src/: BinaryProtocole.cpp  UDPserver.cpp  main.cpp
sounds/: End.m4a  Intro.m4a  Triste.m4a
